--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -130,7 +130,7 @@
       exifInfo += '<strong>拍照时间：</strong>' + (exifData.DateTimeOriginal || '') + '<br>';
       exifInfo += '<strong>经度：</strong>' + (exifData.GPSLongitude || '') + '<br>';
       exifInfo += '<strong>纬度：</strong>' + (exifData.GPSLatitude || '') + '<br>';
-      exifInfo += '<strong>ISO：</strong>' + (exifData.ISO || '') + '<br>';
+      exifInfo += '<strong>ISO：</strong>' + (exifData.ISOSpeedRatings || '') + '<br>';
       exifInfo += '<strong>光圈大小：</strong>' + (exifData.FNumber || '') + '<br>';
       exifInfo += '<strong>曝光时间：</strong>' + (exifData.ExposureTime || '') + '<br>';
       exifInfo += '<strong>设备信息：</strong>' + (exifData.Make || '') + ' ' + (exifData.Model || '') + '<br>';
