--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -43,10 +43,13 @@
     }
 
     .exif-info-item {
-      flex: 0 0 50%;
-      margin-bottom: 5px;
+      flex: 0 0 100%;
       box-sizing: border-box;
       padding: 5px;
+    }
+
+    .exif-info-row:nth-child(1) {
+      flex-wrap: nowrap;
     }
 
     /* exif信息标题样式 */
@@ -150,12 +153,13 @@
     // 将EXIF信息转换为HTML格式字符串
     function createExifInfo(exifData) {
       var exifInfo = '<div class="exif-info-row">';
-      exifInfo += '<div class="exif-info-item"><strong>拍照时间：</strong>' + (exifData.DateTimeOriginal || '') + '</div>';
+      exifInfo += '<div class="exif-info-item"><strong>拍摄时间：</strong>' + (exifData.DateTimeOriginal || '') + '</div>';
       exifInfo += '<div class="exif-info-item"><strong>经度：</strong>' + (exifData.GPSLongitude || '') + '</div>';
       exifInfo += '<div class="exif-info-item"><strong>纬度：</strong>' + (exifData.GPSLatitude || '') + '</div>';
-      exifInfo += '<div class="exif-info-item"><strong>ISO：</strong>' + (exifData.ISOSpeedRatings || '') + '</div>';
-      exifInfo += '<div class="exif-info-item"><strong>光圈大小：</strong>' + (exifData.FNumber || '') + '</div>';
+      exifInfo += '</div>';
+      exifInfo += '<div class="exif-info-row">';
       exifInfo += '<div class="exif-info-item"><strong>曝光时间：</strong>' + (exifData.ExposureTime || '') + '</div>';
+      exifInfo += '<div class="exif-info-item"><strong>光圈大小：</strong>' + (exifData.FNumber || '') + '</div>';
       exifInfo += '<div class="exif-info-item"><strong>设备信息：</strong>' + (exifData.Make || '') + ' ' + (exifData.Model || '') + '</div>';
       exifInfo += '</div>';
       return exifInfo;
