--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -43,7 +43,7 @@
     }
 
     .exif-info-item {
-      flex: 0 0 100%;
+      flex: 0 0 50%;
       box-sizing: border-box;
       padding: 5px;
     }
@@ -150,13 +150,28 @@
     function createExifInfo(exifData) {
       var exifInfo = '<div class="exif-info-row">';
       exifInfo += '<div class="exif-info-item"><strong>拍摄时间：</strong>' + (exifData.DateTimeOriginal || '') + '</div>';
-      exifInfo += '<div class="exif-info-item"><strong>经度：</strong>' + (exifData.GPSLongitude || '') + '</div>';
-      exifInfo += '<div class="exif-info-item"><strong>纬度：</strong>' + (exifData.GPSLatitude || '') + '</div>';
+      exifInfo += '<div class="exif-info-item"><strong>经度：</strong>' + formatCoordinate(exifData.GPSLongitude) + '</div>';
+      exifInfo += '<div class="exif-info-item"><strong>纬度：</strong>' + formatCoordinate(exifData.GPSLatitude) + '</div>';
+      exifInfo += '</div>';
+      exifInfo += '<div class="exif-info-row">';
       exifInfo += '<div class="exif-info-item"><strong>曝光时间：</strong>' + (exifData.ExposureTime || '') + '</div>';
       exifInfo += '<div class="exif-info-item"><strong>光圈大小：</strong>' + (exifData.FNumber || '') + '</div>';
       exifInfo += '<div class="exif-info-item"><strong>设备信息：</strong>' + (exifData.Make || '') + ' ' + (exifData.Model || '') + '</div>';
       exifInfo += '</div>';
       return exifInfo;
+    }
+
+    // 格式化经度和纬度的显示
+    function formatCoordinate(coordinate) {
+      if (Array.isArray(coordinate) && coordinate.length === 3) {
+        var degrees = coordinate[0];
+        var minutes = coordinate[1];
+        var seconds = coordinate[2];
+
+        return degrees + "° " + minutes + "' " + seconds + '"';
+      }
+
+      return '';
     }
 
     // 监听滚动事件，当滑动到底部时加载更多图片
