--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -33,12 +33,14 @@
       padding: 10px;
       background-color: #f9f9f9;
       box-sizing: border-box;
+      max-width: 100%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     /* exif信息排版样式 */
     .exif-info-row {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
       margin-bottom: 5px;
     }
