--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -29,19 +29,13 @@
       color: #333;
       opacity: 0;
       transition: opacity 0.3s ease;
-      border: 1px solid #ccc;
-      padding: 10px;
-      background-color: #f9f9f9;
-      box-sizing: border-box;
-      max-width: 100%;
-      margin-left: auto;
-      margin-right: auto;
     }
 
     /* exif信息排版样式 */
     .exif-info-row {
       display: flex;
-      justify-content: space-between;
+      flex-wrap: wrap;
+      justify-content: center;
       margin-bottom: 5px;
     }
 
@@ -49,20 +43,7 @@
       flex: 0 0 calc(50% - 10px);
       box-sizing: border-box;
       padding: 5px;
-      text-align: left;
-    }
-
-    /* 响应式布局 */
-    @media screen and (max-width: 767px) {
-      .exif-info-row {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      .exif-info-item {
-        flex: 0 0 100%;
-        margin-bottom: 5px;
-      }
+      text-align: center;
     }
   </style>
 </head>
