--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -34,13 +34,12 @@
     /* exif信息排版样式 */
     .exif-info-row {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       margin-bottom: 5px;
     }
 
     .exif-info-item {
-      flex: 0 0 calc(50% - 10px);
+      flex: 0 0 33.33%;
       box-sizing: border-box;
       padding: 5px;
       text-align: center;
