--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -22,6 +22,8 @@
 
     /* exif信息样式 */
     .exif-info {
+      max-width: 100%;
+      height: auto;
       margin-top: 10px;
       font-family: Arial, sans-serif;
       font-size: 14px;
