--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -22,9 +22,9 @@
 
     /* exif信息样式 */
     .exif-info {
-      max-width: 100%;
-      height: auto;
       margin-top: 10px;
+      margin-left: 3%;
+      margin-right: 3%;
       font-family: Arial, sans-serif;
       font-size: 14px;
       text-align: center;
