--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -23,8 +23,8 @@
     /* exif信息样式 */
     .exif-info {
       margin-top: 10px;
-      margin-left: 3%;
-      margin-right: 3%;
+      height: auto;
+      width: 100%;
       font-family: Arial, sans-serif;
       font-size: 14px;
       text-align: center;
