--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -24,7 +24,7 @@
     .exif-info {
       margin-top: 10px;
       height: auto;
-      width: 100%;
+      max-width: 100%;
       font-family: Arial, sans-serif;
       font-size: 14px;
       text-align: center;
