--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -35,13 +35,15 @@
 
     /* exif信息排版样式 */
     .exif-info-row {
+      height: auto;
+      max-width: 100%;
       display: flex;
       justify-content: center;
       margin-bottom: 5px;
     }
 
     .exif-info-item {
-      flex: 0 0 30%;
+      flex: 0 0 40%;
       box-sizing: border-box;
       padding: 5px;
       text-align: center;
