--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -22,9 +22,8 @@
 
     /* exif信息样式 */
     .exif-info {
+      width: 100%;
       margin-top: 10px;
-      height: auto;
-      max-width: 100%;
       font-family: Arial, sans-serif;
       font-size: 14px;
       text-align: center;
@@ -34,9 +33,8 @@
     }
 
     /* exif信息排版样式 */
-    .exif-info-row {
-      height: auto;
-      max-width: 100%;
+    .exif-info-row{
+      width: 100%;
       display: flex;
       justify-content: center;
       margin-bottom: 5px;
