--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -44,7 +44,7 @@
       flex: 0 0 33.33%;
       box-sizing: border-box;
       padding: 5px;
-      text-align: right;
+      text-align: left;
     }
   </style>
 </head>
