--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -64,7 +64,8 @@
       'image6.jpg',
       'image7.jpg',
       'image8.jpg',
-      'image9.jpg'
+      'image9.jpg',
+      'image15.jpg'
     ];
 
     // 随机排序图片列表
