--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -65,7 +65,13 @@
       'image7.jpg',
       'image8.jpg',
       'image9.jpg',
-      'image15.jpg'
+      'image10.jpg',
+      'image11.jpg',
+      'image12.jpg',
+      'image13.jpg',
+      'image14.jpg',
+      'image15.jpg',
+      'image16.jpg'
     ];
 
     // 随机排序图片列表
