--- a/zhanshi/ceshi.html
+++ b/zhanshi/ceshi.html
@@ -1,89 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photo Gallery</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/exif-js/exif.js"></script>
-  <style>
-    /* CSS 样式代码 */
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-  
-    .photo {
-      width: 200px;
-    }
-  
-    .photo img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .photo .exif {
-      margin-top: 5px;
-      font-size: 14px;
-      color: #666;
-    }
-  </style>
+  <title>Photo Showcase</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div id="app">
-    <div class="gallery">
-      <div v-for="photo in photos" :key="photo.name" class="photo">
-        <img :src="photo.url" alt="Photo">
-        <div class="exif">{{ photo.exif }}</div>
+    <h1>Photo Showcase</h1>
+    <div class="photo-container">
+      <div v-for="photo in photos" :key="photo.id" class="photo-item">
+        <img :src="photo.url" :alt="photo.name" @click="showExif(photo)">
+        <div class="exif-info" v-if="photo.showExif">
+          <h2>EXIF Information</h2>
+          <p><strong>Shoot Time:</strong> {{ photo.exif.shootTime }}</p>
+          <p><strong>Device:</strong> {{ photo.exif.device }}</p>
+          <p><strong>Parameters:</strong> {{ photo.exif.parameters }}</p>
+        </div>
       </div>
     </div>
   </div>
 
-  <script>
-    new Vue({
-      el: "#app",
-      data() {
-        return {
-          repository: "lairdmax/lairdmax.github.io", // 替换为实际的仓库名，例如 "username/my-repo"
-          photos: []
-        };
-      },
-      mounted() {
-        this.fetchPhotos();
-      },
-      methods: {
-        fetchPhotos() {
-          const apiUrl = `https://api.github.com/repos/${this.repository}/contents`;
-          fetch(apiUrl)
-            .then(response => response.json())
-            .then(data => {
-              const photoFiles = data.filter(file => {
-                const fileName = file.name.toLowerCase();
-                return fileName.endsWith(".jpg") || fileName.endsWith(".jpeg") || fileName.endsWith(".png") || fileName.endsWith(".gif");
-              });
-              this.getExifInfo(photoFiles);
-            })
-            .catch(error => {
-              console.error("Error fetching photos:", error);
-            });
-        },
-        getExifInfo(files) {
-          files.forEach(file => {
-            const photo = {
-              name: file.name,
-              url: file.download_url,
-              exif: "" // 初始为空，稍后填充 EXIF 信息
-            };
-            EXIF.getData(file.download_url, function() {
-              const exifData = EXIF.pretty(this);
-              photo.exif = exifData;
-            });
-            this.photos.push(photo);
-          });
-        }
-      }
-    });
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  <script src="app.js"></script>
 </body>
+
 </html>
