--- a/zhanshi/ceshi.html
+++ b/zhanshi/ceshi.html
@@ -25,6 +25,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
   <script src="app.js"></script>
 </body>
 
