--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <img id="logo-img" src="./img/icon/logo.png" alt="img">
                                 <div class="img-title">
                                     <span class="img-title-big" id="logo-text-2">LairdMax</span>
-                                    <span class="img-text" id="logo-text-2">@</span>
+                                    <span class="img-text" id="logo-text-2">@47</span>
                                 </div>
                             </div>
                             <!--介绍信息-->
