--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-5" href="https://lairdmax.github.io" target="_blank">
+                                        <a id="link-url-5" href="./Photo_Gallery/index.html" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-5" class="fa-solid fa-book-bookmark"></i>
-                                                <span class="link-name" id="link-name-5">未开发</span>
+                                                <span class="link-name" id="link-name-5">Photo_Gallery</span>
                                             </div>
                                         </a>
                                     </div>
